--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
